Fix : overflow

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -34,6 +34,7 @@
 }
 body{
     font-family: 'Tajawal',sans-serif;
+    overflow-x: hidden;
 }
 button{
     font-family: inherit;
